--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="icon"  type="image/png" href="/public/planet.png">
+    <link rel="icon"  type="image/png" href="/public/btnIcon.png">
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
@@ -41,7 +41,7 @@
         class="relative flex flex-col lg:scale-75 xl:scale-100 max-w-screen-xl xl:max-w-screen-2xl 2xl:w-full items-center justify-center px-[30px] gap-2"
       >
         <header
-          class="w-full flex flex-row flex-wrap items-center max-w-screen-xl px-4 justify-between text-right text-[36px] text-colors-black-100 font-inknut-antiqua"
+        class="w-full flex flex-col md:flex-row flex-wrap items-center max-w-screen-xl px-4 justify-between text-right text-[36px] text-colors-black-100 font-inknut-antiqua"
         >
           <div
             class="shrink-0 flex flex-row items-center scale-[0.8] justify-center gap-[10px]"
@@ -101,7 +101,7 @@
               <img
                 src="/public/frame1.svg"
                 alt="highlight"
-                class="w-auto h-32 absolute z-10 right-[15%] -top-[20%]"
+                class="w-auto h-32 absolute z-10 -right-[5%]  md:right-[15%] -top-[20%]"
               />
               <div class="relative w-80 h-[273px]">
                 <img
@@ -110,15 +110,15 @@
                   src="/public/linkedin dp.jpg"
                 />
               </div>
-              <strong class="font-normal">Hi there</strong>
+              <strong class="font-normal text-[48px] lg:text-inherit">Hi there</strong>
               <img
-                class="relative w-[710.9px] h-[12.1px]"
-                alt=""
+              class="relative w-full lg:w-[710.9px] h-[12.1px]"
+              alt=""
                 src="/public/vectorunderline.svg"
               />
             </div>
             <div
-              class="relative text-base md:text-5xl text-left flex flex-row gap-1 flex-wrap max-w-[1071px] shrink-0 font-inter"
+            class="relative text-[18px] md:text-5xl text-left flex flex-row gap-1 flex-wrap max-w-[1071px] shrink-0 font-inter"
             >
               <p class="m-0 h-fit">
                 <span class="font-inter text-colors-black-100"
@@ -155,7 +155,7 @@
             </div>
             <iframe 
               style="border-radius:12px" 
-              class="max-w-sm transform scale-50 md:translate-y-0 md:scale-100"
+              class="md:max-w-sm transform md:translate-y-0 "
               src="https://open.spotify.com/embed/track/0CS28Nfq8ZiVhwQrZpE85X?utm_source=generator" 
               width="100%" 
               height="152" 
@@ -175,50 +175,50 @@
               loading="lazy"
             ></iframe> -->
             <div
-              class="shrink-0 flex flex-row items-center justify-start gap-[34px] text-mini"
+            class="shrink-0 md:scale-100 scale-90 flex flex-row items-center justify-start gap-[34px] text-mini"
             >
+            <a href = "mailto:medinichopra11@gmail.com">
               <img
-                class="relative w-[51.4px] h-[56.7px] object-cover cursor-pointer"
+                class="relative w-[49.4px] h-[54.7px] object-cover cursor-pointer"
                 alt="iconImage"
                 src="/public/vectorgoogle@2x.png"
-                href="mailto:medinichopra11@gmail.com"
               />
-
+            </a>
+              <a href="https://www.github.com/medinichopra">
               <img
                 class="relative w-[63px] h-[68px] overflow-hidden shrink-0 object-cover cursor-pointer"
                 alt="iconImage"
                 src="/public/icongithub@2x.png"
-                href="https://github.com/medinichopra"
               />
-
+            </a>
+            <a href="https://www.linkedin.com/in/medini-chopra-44b950205/">
               <img
                 class="relative w-[63px] h-[68px] overflow-hidden shrink-0 object-cover cursor-pointer"
                 alt="iconImage"
                 src="/public/iconlinkedin@2x.png"
-                href="https://www.linkedin.com/in/medini-chopra-44b950205/"
               />
-
+            </a>
+            <a href = "">
               <img
                 class="relative w-[63px] h-[68px] overflow-hidden shrink-0 object-cover cursor-pointer"
                 alt="iconImage"
                 src="/public/medium-fill@2x.png"
                 
               />
-
+            </a>
+            <a href = "https://twitter.com/medinichopra_">
               <img
                 class="relative w-[63px] h-[68px] overflow-hidden shrink-0 object-cover cursor-pointer"
                 alt="iconImage"
                 src="/public/icons-here@2x.png"
-                href="https://twitter.com/medinichopra_"
               />
+            </a>
             </div>
           </div>
         </section>
-        <footer
-          class="w-8/12 lg:h-40 flex flex-row absolute -z-10 bottom-[5%] items-start justify-between"
-        >
+        <footer class="w-8/12 h-20 md:h-32 lg:h-40 flex flex-row absolute lg:-z-10 bottom-0 lg:bottom-[5%] items-start justify-between">
           <img
-            class="relative self-end w-12 h-12 object-cover"
+            class="relative self-end w-10 h-10 object-cover"
             alt=""
             src="/public/Group.png"
           />
