fixed project cards

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
           href="https://medinichopra.notion.site/medinichopra/tihai-99ed48d6c10d4acfa361a3f3e05a4d2a"
           target="_blank"
           rel="noopener"
-          class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effef4,_#eefffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
+          class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effffa,_#effffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
         >
               <div
                 class="shrink-0 flex flex-col items-start !cursor-pointer justify-center gap-[11px]"
@@ -525,7 +525,7 @@
               href="https://medinichopra.notion.site/medinichopra/rasa-142ad643875342f68a8660a02829c554"
               target="_blank"
               rel="noopener"
-              class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effef4,_#eefffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
+              class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effffa,_#effffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
             >
               <div
                 class="shrink-0 flex flex-col !cursor-pointer items-start justify-center gap-[11px]"
@@ -560,7 +560,7 @@
               href="https://medinichopra.notion.site/medinichopra/Tiny-Tech-Tales-c328e70ce40d4a4a82fc4bdecbb39e4b"
               target="_blank"
               rel="noopener"
-              class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effef4,_#eefffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
+              class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effffa,_#effffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
             >
               <div
                 class="shrink-0 flex flex-col !cursor-pointer items-start justify-center gap-[11px]"
@@ -672,7 +672,7 @@
           class="shrink-0 flex flex-col lg:flex-row items-start justify-start p-2.5 gap-8 scale-90 lg:scale-95 xl:scale-100 xl:gap-10"
           >
             <div
-              class="openMultiplayerVideoModal rounded-[20.03px] [background:linear-gradient(180deg,_#effef4,_#eefffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] box-border h-[453px] overflow-hidden flex flex-col items-center justify-between py-[26px] px-[22px] relative border-[1px] border-solid border-lightgray"
+              class="openMultiplayerVideoModal rounded-[20.03px] [background:linear-gradient(180deg,_#effffa,_#effffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] box-border h-[453px] overflow-hidden flex flex-col items-center justify-between py-[26px] px-[22px] relative border-[1px] border-solid border-lightgray"
             >
             <iframe 
             width="349" 
@@ -700,7 +700,7 @@
               </div>
             </div>
             <div
-              class="openMultiplayerVideoModal rounded-[20.03px] [background:linear-gradient(180deg,_#effef4,_#eefffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] box-border h-[453px] overflow-hidden flex flex-col items-center justify-between py-[26px] px-[22px] relative border-[1px] border-solid border-lightgray"
+              class="openMultiplayerVideoModal rounded-[20.03px] [background:linear-gradient(180deg,_#effffa,_#effffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] box-border h-[453px] overflow-hidden flex flex-col items-center justify-between py-[26px] px-[22px] relative border-[1px] border-solid border-lightgray"
             >
               <iframe
                 width="349"
@@ -733,7 +733,7 @@
               /> -->
             </div>
             <div
-              class="openMultiplayerVideoModal rounded-[20.03px] [background:linear-gradient(180deg,_#effef4,_#eefffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] box-border h-[453px] overflow-hidden flex flex-col items-center justify-between py-[26px] px-[22px] relative border-[1px] border-solid border-lightgray"
+              class="openMultiplayerVideoModal rounded-[20.03px] [background:linear-gradient(180deg,_#effffa,_#effffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] box-border h-[453px] overflow-hidden flex flex-col items-center justify-between py-[26px] px-[22px] relative border-[1px] border-solid border-lightgray"
             >
             <iframe 
             width="349" 
