--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inknut Antiqua:wght@400&display=swap"
     />
-    <link rel="stylesheet" crossorigin href="/assets/global-0FpLuir4.css">
+    <link rel="stylesheet" crossorigin href="/assets/global-msfYQGhy.css">
   </head>
   <body>
     <section
