--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
               >
                 <p class="m-0 !cursor-pointer">
                   using glass as a transparent medium for projection and
-                  holographic!
+                  holographic
                 </p>
-                <p class="m-0 !cursor-pointer">effects</p>
+                <p class="m-0 !cursor-pointer">effects!</p>
               </div>
             </a>
             <div
