made more heavy changes

--- a/index.html
+++ b/index.html
@@ -395,10 +395,107 @@
 <!-- ==================== ADDING ANOTHER SECTION OF THREE PROJECTS============== -->
  
 <div
+          class="w-full shrink-0 flex flex-col gap-8 lg:gap-0 lg:flex-row items-center justify-between text-5xl"
+          >
+
+          <a
+            href="https://medinichopra.notion.site/medinichopra/tihai-99ed48d6c10d4acfa361a3f3e05a4d2a"
+            target="_blank"
+            rel="noopener"
+            class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
+          >
+            <div class="relative !cursor-pointer w-[349px] h-[158px]">
+              <img
+                class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
+                alt=""
+                src="/public/musicians.png"
+              />
+            </div>
+            <div class="shrink-0 flex flex-col items-start !cursor-pointer justify-center gap-0">
+              <b class="relative !cursor-pointer tracking-[0.3px] leading-[27.4px] m-0 p-0">
+                Tihai
+              </b>
+            </div>
+            <div class="relative text-base tracking-[0.5px] !cursor-pointer leading-[26.44px] font-inter m-0 p-0">
+              <p class="m-0 !cursor-pointer">
+                Generate a rhythmic pattern found</p>
+              <p class="m-0 !cursor-pointer">
+                in Hindustani classical music
+              </p>
+              <p class="m-0 !cursor-pointer">
+                and help dancers choreograph better!
+              </p>
+            </div>            
+          </a>
+
+          <a
+            href="https://medinichopra.notion.site/medinichopra/rasa-142ad643875342f68a8660a02829c554"
+            target="_blank"
+            rel="noopener"
+            class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
+          >
+            <div class="relative !cursor-pointer w-[349px] h-[158px]">
+              <img
+                class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
+                alt=""
+                src="/public/indian art.jpg"
+              />
+            </div>
+            <div class="shrink-0 flex flex-col items-start !cursor-pointer justify-center gap-[11px]">
+              <b
+                class="relative !cursor-pointer tracking-[0.3px] leading-[27.4px]"
+                >Rasa</b
+              >
+            </div>
+            <div class="relative text-base tracking-[0.5px] !cursor-pointer leading-[26.44px] font-inter">
+              <p class="m-0 !cursor-pointer">
+                Convolutional neural network identifying
+              </p>
+              <p class="m-0 !cursor-pointer">
+                the emotion of a given Indian painting
+              </p>
+              <p class="m-0 !cursor-pointer">
+                based on Eastern Aesthetics theories.
+              </p>
+            </div>
+          </a>
+
+          <a
+            href="https://medinichopra.notion.site/medinichopra/Tiny-Tech-Tales-c328e70ce40d4a4a82fc4bdecbb39e4b"
+            target="_blank"
+            rel="noopener"
+            class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal bg-white overflow-hidden flex flex-col items-start justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
+          >
+            <div class="relative !cursor-pointer w-[349px] h-[158px]">
+              <img
+                class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] max-w-full overflow-hidden max-h-full object-cover"
+                alt=""
+                src="/public/interactive.jpg"
+              />
+            </div>
+            <div class="shrink-0 flex flex-col items-start !cursor-pointer justify-center gap-[11px]">
+              <b
+                class="relative !cursor-pointer tracking-[0.3px] leading-[27.4px]"
+                >Interactive Art</b
+              >
+            </div>
+            <div class="relative text-base tracking-[0.5px] !cursor-pointer leading-[26.44px] font-inter">
+              <p class="m-0 !cursor-pointer">
+                Immersive proof-of-concept using generative 
+              </p>
+              <p class="m-0 !cursor-pointer">
+                art and  performance, using glass as  
+              </p>
+              <p class="m-0 !cursor-pointer">a transparent medium for holographic effects!</p>
+            </div>
+          </a>
+          </div>
+<!--  OLDER ONE -->
+<div
 class="w-full shrink-0 flex flex-col gap-8 lg:gap-0 lg:flex-row items-center justify-between text-5xl"
 >
 <a
-href="https://medinichopra.notion.site/medinichopra/tihai-99ed48d6c10d4acfa361a3f3e05a4d2a"
+href=""
 target="_blank"
 rel="noopener"
 class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effffa,_#effffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
